@@ -7,6 +7,7 @@
  */
 package org.dspace.app.util;
 
+import java.lang.reflect.InvocationTargetException;
 import javax.servlet.ServletContextEvent;
 import javax.servlet.ServletContextListener;
 
@@ -22,20 +23,18 @@ public class DSpaceWebappListener implements ServletContextListener {
     @Override
     public void contextInitialized(ServletContextEvent event) {
         /*
-        * Register that this application is running.
-        */
+         * Register that this application is running.
+         */
 
-       try {
-           Class webappClass = Class.forName("org.dspace.utils.DSpaceWebapp");
-           webApp = (AbstractDSpaceWebapp) webappClass.newInstance();
-           webApp.register();
-       } catch (ClassNotFoundException ex) {
-           event.getServletContext().log("Can't create webapp MBean:  " + ex.getMessage());
-       } catch (InstantiationException ex) {
-           event.getServletContext().log("Can't create webapp MBean:  " + ex.getMessage());
-       } catch (IllegalAccessException ex) {
-           event.getServletContext().log("Can't create webapp MBean:  " + ex.getMessage());
-       }
+        try {
+            Class webappClass = Class.forName("org.dspace.utils.DSpaceWebapp");
+            webApp = (AbstractDSpaceWebapp) webappClass.getDeclaredConstructor().newInstance();
+            webApp.register();
+        } catch (ClassNotFoundException | InstantiationException
+                | IllegalAccessException | IllegalArgumentException
+                | NoSuchMethodException | InvocationTargetException ex) {
+            event.getServletContext().log("Can't create webapp MBean:  " + ex.getMessage());
+        }
     }
 
     @Override
